added render({...}) to the playHeaders.js so that one can render a groovy based template

--- a/jsPlay/japidroot/japidviews/js/books/getBookById.html
+++ b/jsPlay/japidroot/japidviews/js/books/getBookById.html
@@ -2,11 +2,8 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-</head>
 <body>
-    <p>error is: ~errcode </p>
+    <p>error code is: ~errcode </p>
     <p>~{book.title}, ~{book.year}, ~book.id</p>
 </body>
 </html>
