added NashornController2 which share a single instance of engine for less memory. More tests are required.

--- a/jsPlay/public/login.html
+++ b/jsPlay/public/login.html
@@ -58,7 +58,7 @@ button {
 <div>
 put anything in the fields...
 </div>
-	<form method="post" action="/js/books/login">
+	<form method="post" action="/js/auth/login">
 		<div>
 			<label for="name">Name:</label> <input type="text" id="name"
 				name="user_name" />
